[workspace]
members = ["headway", "uniffi-bindgen", "uniffi-bindgen-swift"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83.0"

[profile.release]
lto = "thin"
opt-level = "s"

[workspace.dependencies]
uniffi = "0.29.4"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
