[package]
name = "headway"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
axum = "0.8"
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
uniffi = { version = "0.29.4" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
